# Aion

./: CMakeLists.txt  README.md  add_patterns.cpp  generate_tests.cpp
include/OptDebugger/: DiagnosticEngine.h  IRDiff.h  OptReport.h  PassAnalyzer.h  RemarkCollector.h  Support.h
lib/: DiagnosticEngine.cpp  IRDiff.cpp  OptReport.cpp  PassAnalyzer.cpp  RemarkCollector.cpp  Support.cpp
test/: README.md  cases.cpp  cases.ll  cases.opt.yaml  check_idempotency.py
test/argpromotion/: argprom_aliasing.c  argprom_aliasing.ll  argprom_aliasing.yaml
test/devirt/: devirt_no_single_target.c
test/inline/: inline_hinted_noinline.c  inline_hinted_noinline.ll  inline_hinted_noinline.yaml  inline_no_definition.c  inline_no_definition.ll  inline_no_definition.yaml
test/sroa/: sroa_address_escape.c  sroa_address_escape.ll  sroa_address_escape.yaml  sroa_volatile.c  sroa_volatile.ll
test/unroll/: unroll_not_suitable.c  unroll_not_suitable.ll  unroll_not_suitable.yaml
test/vectorize/: vect_conditional_store.c  vect_conditional_store.ll  vect_conditional_store.yaml  vect_integer_division.c  vect_integer_division.ll  vect_integer_division.yaml  vect_mixed_types.c  vect_mixed_types.ll  vect_mixed_types.yaml  vect_pointer_iv.c  vect_pointer_iv.ll  vect_pointer_iv.yaml
tools/opt-debugger/: main.cpp
